add jwt function
